# minimon

./: CMakeList.txt  CMakeLists.txt  README.md
examples/: monitor_example.c
include/: monitor.h
src/: monitor.c
tests/: monitor_buffer_test.c  monitor_registry_test.c  monitor_shell_features_test.c  monitor_shell_test.c  monitor_smoke_test.c  monitor_test_utils.h
